<resources>
    <string name="app_name">SolidIndia</string>
    <string name="nav_home">Home</string>
    <string name="nav_products">Products</string>
    <string name="products">Products</string>
    <string name="nav_profile">About Us</string>
    <string name="nav_whatsapp_icon">Whatsapp</string>
    <string name="appSharedPref">solidindia</string>
    <string name="dismiss">Dismiss</string>
    <string name="price">Price</string>
    <string name="share">Share</string>
    <string name="share_with">Share with WhatsApp</string>
    <string name="btn_no_text">No</string>
    <string name="btn_yes_text">Yes</string>
    <string name="tv_title_text">Are you sure want to exit?</string>
    <string name="action_search">Search</string>
    <string name="search_hint">Search</string>
    <string name="font_halvetica">Helvetica.ttf</string>
    <string name="font_halvetica_bold" translatable="false">Helvetica-Bold-Font.ttf</string>

    <!-- Network Msg  -->
    <string name="toast_time_out">Please try again, There is network error</string>
    <string name="toast_net_work">Please try again, Network not available</string>
    <string name="internet_not_available">Please try again, Network not available</string>
    <string name="toast_try_after_sometimes">Something went wrong please try after sometimes..</string>
    <string name="toast_something_wrong">Something went wrong please try again..</string>
    <string name="todo">todo</string>
    <string name="photos_and_videos"><![CDATA[Photos]]></string>
    <string name="highlight">Highlight</string>
    <string name="specification">Specification</string>
    <string name="capacity">Capacity</string>
    <string name="drum_diameter">Drum diameter</string>
    <string name="more_then" translatable="false">MORE THAN 45 YEARS \nEXPERIENCE OF SUPPLYING \nROAD CONSTRUCTION EQUIPMENTS</string>
    <string name="company_profile" translatable="false">Company Profile</string>
    <string name="founded" translatable="false">Founded and established in 1972 by Late Shri Vashrambhai
Dodiya, we at Solid hold a prominent identity in Road Construction
Equipment manufacturing. By seeking technical updates from
global market, we sensed the demands to make our products
better with best possible technical changes and worked upon to
satisfy the every niche demands. This practice has made us one of
the leading and most innovative manufacturers of India. Our team
of expert researchers put all their efforts in offering profitable solutions
using latest technologies.  \n\nWe aim to design and deliver most consumer friendly, innovative
yet practical products of Road Construction Equipments. Our
range of key products include Asphalt Paver Finishers (having 2.5
meters to 6 meters paving width) and Stationery / Mobile Asphalt
Drum Mix Plants (40 TPH to 150 TPH capacities).</string>

    <string name="chirmen_achiv" translatable="false">Chairman’s Achievement</string>
    <string name="chairman" translatable="false">Chairman and Founder of Solid that was setup in 1972, shri Hasmukhbhai
Dodia is a Commerce Graduate holding post graduation
degree in LLB. With 30 years of floor and on field experience, he is
the pillar and strength behind the development of industry-centric
machines aiming to offer performance essential to the customers. \n\nHe believed in providing the efficient industrial machines like road
construction equipments of Asphalt Batch Mix Plant, Asphalt
Drum Mix Plant, Asphalt Paver Finisher etc. With latest technology
to the customers for simpler and easier tasks.</string>


    <string name="founder_of_solid" translatable="false">Founder of Solid</string>
    <string name="global" translatable="false">Global Installations</string>
    <string name="download" translatable="false">Download</string>
    <string name="road">ROAD CONSTRUCTION EUQIPMENT</string>

    <string name="since">SINCE 1972</string>
    <string name="india">INDIA</string>
    <string name="back">Back</string>
    <string name="en">EN</string>
    <string name="ar">AR</string>
    <string name="es">ES</string>
    <string name="zh">ZH</string>
    <string name="fr">FR</string>
    <string name="ta">TA</string>
    <string name="te">TE</string>
    <string name="follow_us_on">Follow us on</string>
    <string name="more_product">More Product</string>
</resources>
