<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#ffffff"
    android:padding="@dimen/_20sdp">
    <com.utils.MyCustomTextView
        android:id="@+id/tv_dialog_app_exit_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        app:setTypeFace="@string/font_halvetica"
        android:text="@string/tv_title_text"/>
    <com.utils.MyCustomTextView
        android:id="@+id/btn_dialog_app_no"
        android:layout_width="wrap_content"
        android:layout_below="@+id/tv_dialog_app_exit_title"
        android:background="@null"
        android:gravity="center"
        android:padding="@dimen/_10sdp"
        android:textColor="@color/btn_text_color"
        android:layout_toLeftOf="@+id/btn_dialog_app_yes"
        android:layout_height="wrap_content"
        app:setTypeFace="@string/font_halvetica"
        android:text="@string/btn_no_text"/>
    <com.utils.MyCustomTextView
        android:id="@+id/btn_dialog_app_yes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:textColor="@color/btn_text_color"
        app:setTypeFace="@string/font_halvetica"
        android:padding="@dimen/_10sdp"
        android:background="@null"
        android:text="@string/btn_yes_text"
        android:layout_below="@+id/tv_dialog_app_exit_title"/>

</RelativeLayout>