<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:scaleType="fitXY"
            android:src="@mipmap/ic_launcher11"
            android:visibility="gone" />

        <com.utils.MyCustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:text="@string/more_then"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:setTypeFace="@string/font_halvetica_bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height=".5dp"
            android:layout_marginTop="@dimen/_5sdp"
            android:background="@color/grey" />

        <com.utils.MyCustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/company_profile"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:setTypeFace="@string/font_halvetica_bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height=".5dp"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:background="@color/grey" />

        <com.utils.MyCustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:gravity="center|start"
            android:text="@string/founded"
            android:textColor="@color/black"
            android:textSize="@dimen/font_normal"
            app:setTypeFace="@string/font_halvetica" />

        <com.utils.MyCustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/chirmen_achiv"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:setTypeFace="@string/font_halvetica_bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height=".5dp"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:background="@color/grey" />

        <com.utils.MyCustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:gravity="center|start"
            android:text="@string/chairman"
            android:textColor="@color/black"
            android:textSize="@dimen/font_normal"
            app:setTypeFace="@string/font_halvetica" />

        <com.utils.MyCustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:text="@string/founder_of_solid"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:setTypeFace="@string/font_halvetica_bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height=".5dp"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:background="@color/grey" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_150sdp"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_30sdp"
            android:scaleType="fitXY"
            android:src="@drawable/ic_founder_of_solid" />

        <com.utils.MyCustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/global"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:setTypeFace="@string/font_halvetica_bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height=".5dp"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:background="@color/grey" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="@dimen/_300sdp"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_30sdp"
            android:background="@drawable/squre_border">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_300sdp"
                android:padding="@dimen/_5sdp"
                android:src="@drawable/ic_map" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <com.utils.MyCustomTextView
            android:id="@+id/btnDownload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/download"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:setTypeFace="@string/font_halvetica_bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height=".5dp"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:background="@color/grey" />

        <ImageView
            android:id="@+id/ivPdf"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:src="@drawable/ic_pdf" />

        <com.utils.MyCustomTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:text="@string/follow_us_on"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:setTypeFace="@string/font_halvetica_bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height=".5dp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:background="@color/imageBorderColor" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:gravity="start"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivFacebook"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_marginStart="@dimen/_20sdp"
                android:src="@drawable/ic_facebook" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivInsta"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_marginStart="@dimen/_15sdp"
                android:src="@drawable/ic_insta" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivYoutube"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_marginStart="@dimen/_15sdp"
                android:src="@drawable/ic_youtube" />
        </androidx.appcompat.widget.LinearLayoutCompat>


    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.core.widget.NestedScrollView>
